     configure like this.

     ./configure CABALFLAGS="-f -useThreaded"
   - remove old ICA files, used by the old maven build system.
** Binoculars (C-library)
   - Added support for double images.
   - Added the `hkl_binoculars_detectors_2d_img_load` in order to
     load rigaku img files. For now only uint16_t images.
   - Added the Rigaku XSPA 1M detector (RigakuXspa1M).
** Binoculars-ng (Haskell program)
   - dispatcher.ncores = 0 mean: use all capabilities of the CPU hardware.
     The default remains equal to `4` if this property is not defined.
   - Projections
     - 'q_thetax_phix' -> latitude and longitude of q with qx as reference.
     - 'q_thetay_phiy' -> latitude and longitude of q with qy as reference.
     - 'q_thetaz_phiz' -> latitude and longitude of q with qz as reference.
   - DataSource Image
     - support for double image from hdf5 files.
     - Added a constructor in order to read the Rigaku images.
       `DataSourcePath'Image'Img (Detector Hkl DIM2) (DataSourcePath Attenuation) Text Scannumber`
     - Added a new constructor for dummy images.
       DataSourcePath'Image'Dummy.

       this is usefull if you want to obtain a cube with the intensity
       corrections (polarisation) . Just set all the image pixels
       values to 1.0 and voilà.

** Documentation
   - Updated thanks to Didier Weirmeille from the ESRF
** Tests
   - binoculars-ng detectors tests are using sha256 in order to check
     mask and coordinates integrity. If you change a detector
     definition you need to update the sha256 fingerprint in the
     hkl-binoculars_t.c file.

     example of a failure:

     detector 9 fingerpring: 5c747478f67ad54485bc3502c825bff41c0934c94a0160179909c483d75f541a , expected: 49885be2c9cfea697b8f6a6e0c00f9dec687760a8b4cfdb4eda94af1014322ce
     not ok 3 - mask_get

* 5.1.3 2025-01-15
** Lib binoculars
   - it is now possible to mask a ring of n pixels around each module.
     Most of the times these pixel's statistics are bad.