@@ -16,6 +16,8 @@
    - Added the `hkl_binoculars_detectors_2d_img_load` in order to
      load rigaku img files. For now only uint16_t images.
    - Added the Rigaku XSPA 1M detector (RigakuXspa1M).
+   - fixed the polarisation correction.
+   - switch the photons array to float in order to deal with small corrections. (polarisation)
 ** Binoculars-ng (Haskell program)
    - dispatcher.ncores = 0 mean: use all capabilities of the CPU hardware.
      The default remains equal to `4` if this property is not defined.
@@ -33,7 +35,6 @@
        this is usefull if you want to obtain a cube with the intensity
        corrections (polarisation) . Just set all the image pixels
        values to 1.0 and voilà.
-
 ** Documentation
    - Updated thanks to Didier Weirmeille from the ESRF
 ** Tests
